2002-02-06  Thomas Vander Stichele <thomas@apestaart.org>

  	* more build cleanup : merging over changes from gst-player

2002-01-17  Bastien Nocera  <hadess@hadess.net>

	* sys/Makefile.am: make the qcam plugin build only
	only platforms using NASM, ie. x86

2002-01-06 Rodney Dawes <dobey@free.fr>

	* configure.ac: added -lm to cdparanoia check so it works,
		fixed a couple typos for the libraw1394 checks
	
2001-12-20 Thomas Vander Stichele  <thomas@apestaart.org>

	* opened gst-plugins module
	* starting with sys plugins